fixed text wrap

--- a/styles/home.css
+++ b/styles/home.css
@@ -17,12 +17,14 @@
 }
 
 .center-side {
+  max-width: 500px;
   padding: 10px;
   text-align: center;
   color: #f7f1ed;
 }
 
 .center-side h1{
+  white-space: nowrap;
   font-size: 40px;
   color: tan;
 }
